syntax = "proto3";

package auction;

option go_package = "distributed-auction/grpc";

service AuctionService {
  rpc Bid (BidRequest) returns (BidResponse);

  rpc Result (ResultRequest) returns (ResultResponse);

  rpc Sync (SyncRequest) returns (SyncResponse);
}


message BidRequest {
  string bidder_id = 1;
  int32 amount = 2;
}

message BidResponse {
  enum Status {
    SUCCESS = 0;
    FAIL = 1;
    EXCEPTION = 2;
  }
  Status status = 1;
  string reason = 2;
}

message ResultRequest {
  // Empty
}

message ResultResponse {
  int32 highest_bid = 1;
  string winner_id = 2;
  bool is_over = 3;
}

message SyncRequest {
  int32 highest_bid = 1;
  string winner_id = 2;
}

message SyncResponse {
  bool ack = 1;
}